--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.5.3",
+    "firebase": "^8.0.0",
+    "framer-motion": "^2.9.4",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.9.6",
+    "react-reveal": "^1.2.2",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
+    "react-typical": "^0.1.3",
+    "swiper": "^6.3.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
