--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.9.6",
+    "react-modal": "^3.11.2",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
     "react-typical": "^0.1.3",
